--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     <h2>Contact FixIT</h2>
     <p><strong>Program:</strong> Luni–Vineri după 18:00, weekend flexibil (cu programare).</p>
     <p><strong>WhatsApp:</strong> +40 745 322 943</p>
-    <p><strong>Email:</strong> peter.nemes22@gmail.com</p>
+    <p><strong>Email:</strong> contact@help-fix-it.com</p>
     <p style="margin-top:10px;">Trimite-mi un mesaj cu problema ta și revin cu un răspuns cât mai rapid.</p>
   </div>
 </section>
